<resources>
    <string name="app_name">CreamLogin</string>
    <string name="create_naccount">Create\nAccount.</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
    <string name="sign_up">Descubrir</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="continue_your_adventure">Continue your adventure</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="start_a_new_social_adventure">Start a new social adventure.</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="or_create_account">Or Create Account →</string>
    <string name="texts_welcome">Get involved with people and events\naround you</string>
    <string name="create">Or Create Account →</string>
    <string name="autor">Autor :</string>
    <string name="lorem_ipsum"> Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Ha sido el estándar desde el año 1500, cuando un impresor desconocido usó una galería de textos y los mezcló para crear un libro especimen. Sobrevivió 500 años e ingresó a documentos electrónicos. Fue popularizado en los 60s con Letraset y más tarde con software de autoedición como Aldus PageMaker.</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="titulo_bonito_aqu">Titulo Bonito Aquí</string>
    <string name="etiqueta">Etiqueta</string>
    <string name="imagen">Imagen</string>
    <string name="enviar">Enviar</string>
    <string name="campo35">35. Comparte una liga de one drive outlook (de tu correo institucional) que incluya material visual del proyecto en .jpg (stills, cartel, etc)</string>
    <string name="enlace_url">Enlace URL</string>
    <string name="acervo_audiovisual_arpa_buap_2024">ACERVO AUDIOVISUAL ARPA BUAP 2024</string>
    <string name="sinopsis">Sinopsis:</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_form">Este formulario registrará su nombre, escriba su nombre.</string>
    <string name="titulo_obra">1. Título original de la obra.</string>
    <string name="titulo">Titulo</string>
    <string name="campo2">2. Menciona si la película está basada en otra obra, si es así ¿cuál?</string>
    <string name="obra_basada">Obra en la que se basa</string>
    <string name="tipo_material_audivisual">3. Marca el tipo de material audiovisual de acuerdo a su duración con créditos incluidos.</string>
    <string name="cortometraje">Cortometraje (máximo 30 minutos)</string>
    <string name="mediometraje">Mediometraje (entre 30 minutos y 50 minutos)</string>
    <string name="largomatraje">Largomatraje (más de 50 minutos)</string>
    <string name="clasificacion">4. Marca su clasificación</string>
    <string name="ficcion">Ficción</string>
    <string name="no_ficcion">No Ficción</string>
    <string name="experimental">Experimental</string>
    <string name="genero">5. Menciona el género de la obra (drama, suspenso, etc)</string>
    <string name="genero_de_la_obra">Género de la obra</string>
    <string name="tipo_animacion">6. Si se usó una técnica de animación, menciona cuál fue.</string>
    <string name="tecnica_animacion">Técnica de animación</string>
    <string name="version">7. Versión a</string>
    <string name="color">Color</string>
    <string name="blanco_negro">Blanco y negro</string>
    <string name="duracion">8. Duración en minutos (escribe en número):</string>
    <string name="duracion_minutos">Duración en minutos</string>
    <string name="ano_estreno">9. Año de estreno (en número):</string>
    <string name="anoEstreno">Año de estreno</string>
    <string name="coproduccion">10. Países de coproducción (si aplica).</string>
    <string name="paises_coproduccion">Páises de coproducción</string>
    <string name="idioma">11. Idioma original</string>
    <string name="idioma_original">Idioma original</string>
    <string name="subtitulos">12. ¿Tiene subtítulos?</string>
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="idioma_subtitulos">13. Qué subtítulos se incluyen en archivos SRT (Español, inglés, francés…)</string>
    <string name="idioma_subtitulos_et">Idioma subtítulos</string>
    <string name="logline">14. Logline</string>
    <string name="describir_guion">Describe el guión</string>
    <string name="tv_sinopsis">15. Sinopsis</string>
    <string name="extension">Extensión de 50 a 70 palabras</string>
    <string name="palabras_clave">16. Palabras clave relacionadas con la obra</string>
    <string name="ed_palabras_clave">Palabras clave</string>
    <string name="tv_locaciones">17. Locaciones (ciudades y/o países).</string>
    <string name="ed_locacion">Países o ciudades</string>
    <string name="tv_clasificacion_publico">18. Clasificación al público</string>
    <string name="a">A-Apto pata todo público</string>
    <string name="b">B-Recomendada para mayores de 12 años</string>
    <string name="b15">B15-Apta para mayores de 15 años</string>
    <string name="c_apta_para_mayores_de_edad">C-Apta para mayores de edad</string>
    <string name="d">D-Apta sólo para adultos</string>
    <string name="sitio">19. Sitio oficial del proyecto</string>
    <string name="sitio_oficial">Sitio oficial</string>
    <string name="redes_sociales">20. Redes sociales del proyecto</string>
    <string name="ed_redes_sociales">Redes sociales</string>
    <string name="directivos">21. Nombre completo de la (s) persona (s) implicada (s) en el puesto de Dirección</string>
    <string name="nombre_completo_directivo">Nombre completo</string>
    <string name="persona_encargada">22. Semblanza curricular de la (s) persona (s) encargada (s) de la Dirección del proyecto</string>
    <string name="persona_encargada_semblanza">Persona(s) encargada(s)</string>
    <string name="personas_implicadas">23. Nombre completo de la (s) persona (s) implicada (s) en la producción</string>
    <string name="personas_implicada">Personas(s) implicada(s)</string>
    <string name="nombre_telefono">24. Nombre completo y número de celular de la persona a cargo del proyecto</string>
    <string name="nombre_y_telefono">Nombre y telefono</string>
    <string name="enlistado_personas_implicadas">25. Enlista el nombre completo de todas las personas implicadas en la realización y sus puestos (producción, sonido, edición, etc)</string>
    <string name="personas_y_puestos">Personas y puestos</string>
    <string name="reparto_nacionalidades">26. Enlista el reparto y menciona sus nacionalidades.</string>
    <string name="reparto_y_personalidades">Reparto y personalidades</string>
    <string name="integrantes_ARPA">27. Número de integrantes ARPA BUAP que participaron en el proyecto</string>
    <string name="asignatura">28.Asignatura (s) donde se gestó la idea, se impulsó o se desarrolló el proyecto y/o se concluyó (si es el caso)</string>
    <string name="asignatura_idea">Asignatura</string>
    <string name="participacion_eventos">29. Participación en eventos cinematográficos (Nombre del festival o evento, país, año, tipo de mención)</string>
    <string name="eventos">Eventos</string>
    <string name="premios_reconocimientos">30. Premios y reconocimientos adicionales (becas, apoyos, etc)</string>
    <string name="reconocimientos_y_premios">Reconocimientos y premios</string>
    <string name="tv_idioma">Idioma : </string>
    <string name="tv_idioma_original">Idioma original</string>
    <string name="tv_duracion">Duración :</string>
    <string name="duracion_en_minutos">Duracion en minutos</string>
    <string name="tv_link_recurso">Link Recurso :</string>
    <string name="link_aqui">Link aquí</string>
    <string name="buscar_multimedia">Buscar Multimedia</string>
    <string name="duracion_larga">Duracion Larga</string>
    <string name="duracion_corta">Duracion Corta</string>
    <string name="duracion_media">Duracion Media</string>
    <string name="a_adir_recurso">Añadir Recurso</string>
    <string name="duracionn">Duracion:</string>
    <string name="tiempo">Tiempo</string>
    <string name="portada_de_la_pel_cula">Portada de la película</string>
    <string name="t_tulo_de_ejemplo">Título de Ejemplo</string>
    <string name="clasificaci_n_pg_13">Clasificación: PG-13</string>
    <string name="g_nero_animaci_n_aventura">Género: Animación, Aventura</string>
    <string name="aqu_va_una_sinopsis_larga_que_puede_provenir_de_la_api">Aquí va una sinopsis larga que puede provenir de la API.</string>
    <string name="duraci_n_1h_45m">Duración: 1h 45m</string>
    <string name="filtros">Filtros de Busqueda</string>
</resources>