<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/accent_color"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="-24dp"
        app:cardCornerRadius="30dp"
        android:layout_alignParentTop="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/ic_back_arrow">
    </ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/create_naccount">

    </TextView>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/forms"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_title">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/full_name"
            android:layout_marginTop="20dp"
            android:inputType="text">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/email"
           android:layout_marginTop="14dp"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:layout_marginTop="14dp"
            android:inputType="phone">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:layout_marginTop="14dp"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/confirm_password"
            android:layout_marginTop="14dp"
            android:inputType="textPassword">
        </EditText>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/subtitle_color"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/agree_to_terms_and_conditions">
        </CheckBox>
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:background="@drawable/background_btn"
            android:textColor="@color/text_color"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/subtitle_color"
                android:text="@string/already_have_an_account">
            </TextView>

            <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="5dp">
            </TextView>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>





</RelativeLayout>