<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="-24dp"
        app:cardCornerRadius="32dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/backIconLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_marginTop="70dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_back_arrow">
        </ImageView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="180dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/welcome_back">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginTop="270dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/continue_your_adventure">
        </TextView>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_below="@id/cv_title"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:paddingTop="100dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passsword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/subtitle_color"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/agree_to_terms_and_conditions">
        </CheckBox>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:background="@drawable/background_btn"
            android:textColor="@color/text_color"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="5dp">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</RelativeLayout>