<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchBAR"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:paddingTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/accent_color">

        <ImageView
            android:id="@+id/icBack"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back_arrow"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp">
        </ImageView>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="270dp"
            android:iconifiedByDefault="false"
            android:layout_height="wrap_content"
            android:hint="@string/buscar_multimedia"
            app:queryHint="@string/buscar_multimedia"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_search_view"
            android:layout_marginTop="60dp"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@id/icBack">
        </androidx.appcompat.widget.SearchView>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_arpateca"
            android:contentDescription="@null"
            app:layout_constraintStart_toEndOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/searchView"
            app:layout_constraintTop_toTopOf="@id/searchView">
        </ImageView>

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.chip.ChipGroup
                app:layout_constraintTop_toBottomOf="@id/searchView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFiccion"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ficcion"
                    android:layout_marginStart="20dp">
                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/chipNoFiccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_ficcion"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/chipExperimental"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experimental"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/largaDuracion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion_larga"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/duracionCorta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion_corta"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/duracionMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion_media"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                </com.google.android.material.chip.Chip>


            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBAR">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>