<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.viewpager2.widget.ViewPager2>

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"/>




    <LinearLayout
        android:id="@+id/bottomLayout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            android:layout_marginBottom="-20dp"
            android:layout_marginStart="-20dp"
            android:backgroundTint="@color/secondary_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="50dp"
                android:text="@string/texts_welcome">
            </TextView>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_marginTop="110dp"
                android:layout_marginBottom="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:background="@drawable/backg_btn_login"
                android:textColor="@color/subtitle_color"
                android:textStyle="bold">
            </Button>

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="70dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textColor="@color/text_color"
                android:textStyle="bold"
               android:layout_gravity="end"
                android:paddingTop="8dp" />



        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
